--- a/index.html
+++ b/index.html
@@ -46,6 +46,23 @@
     .warn { color:#ffd27d; }
     .bad { color:#ff7d7d; }
   </style>
+
+  <!-- App identity / mobile-friendly -->
+  <meta name="theme-color" content="#ffffff" />
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+  <meta name="apple-mobile-web-app-status-bar-style" content="default" />
+  <meta name="apple-mobile-web-app-title" content="Noise + Drone" />
+
+  <!-- Favicons -->
+  <link rel="icon" href="/favicon/favicon.ico" sizes="any" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="48x48" href="/favicon/favicon-48x48.png" />
+  <link rel="apple-touch-icon" sizes="180x180" href="/favicon/apple-touch-icon.png" />
+
+  <!-- PWA manifest -->
+  <link rel="manifest" href="/site.webmanifest" />
+
 </head>
 <body>
 <header>
